--- a/.atomist.yml
+++ b/.atomist.yml
@@ -46,3 +46,15 @@ editor:
     - "artifact": "demo-lib"
     - "desiredVersion": "0.1.2"
 
+---
+kind: "operation"
+client: "com.atomist:rug"
+version: "1.0.0-20170602144934"
+editor:
+  name: "Cascade"
+  group: "atomist"
+  artifact: "spring-team-handlers"
+  version: "0.1.171"
+  parameters:
+    - "script": "{"description":"Cascade following push to seed project spring-rest-seed","steps":[{"primitive":"AddFile","description":"Add file cascade","payload":{"path":"cascade","content":"\n"}}]}"
+
